--- a/code/agenda_its/agenda_its/agenda_its.csproj
+++ b/code/agenda_its/agenda_its/agenda_its.csproj
@@ -13,5 +13,17 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+    <PackageReference Include="Acr.UserDialogs" Version="7.1.0.466" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="Enumeration\" />
+    <Folder Include="Utilities\" />
+    <Folder Include="Database\" />
   </ItemGroup>
 </Project>
